# misc_projects

./: .gitignore  CMakeLists.txt
cuda_matadd/: Makefile  README.md  cuda.cu  index.md  matadd.h  md5sum.c  omp.c  seq.c  sycl.cpp  utils.h
cuda_matmul/: CMakeLists.txt
cuda_matmul/src/: CMakeLists.txt  cuda_utils.h  naive.cu  transpose_gpu.cu  transpose_host.cu  utils.c  utils.h
cuda_matmul/utils/: run_turing.sh
cuda_profiling/: CMakeLists.txt  README.md  file_writer.c  file_writer.h  managed_ubench.cu  matadd.cu  run_profiler.sh
cuda_ubench/: CMakeLists.txt  copy_read_only.cu  run_profiler.sh
tug_minimal/: CMakeLists.txt  README.md  aufgabe-perf-cacheanalyse.md
tug_minimal/cmake/: CPM.cmake
tug_minimal/old/tug/: Boundary.hpp  Grid.hpp  Simulation.hpp
tug_minimal/old/tug/Core/: BTCS.hpp  Matrix.hpp  TugUtils.hpp
tug_minimal/optimized/tug/: Simulation.hpp
tug_minimal/optimized/tug/Core/: BTCS.hpp
tug_minimal/src/: bench_defs.hpp.in  io.hpp  main.cpp  run.cpp  run.hpp
